fixed about picture hover effect on mobile

--- a/portfoliodelasam/src/Components/About.module.css
+++ b/portfoliodelasam/src/Components/About.module.css
@@ -264,6 +264,10 @@
       margin-top: 45vh;
       margin-left: 55%;
     }
+    .aboutPicture:hover {
+      margin-top: 45.3vh;
+      margin-left: 55.5%;
+    }
     .title {
       margin-top: 13.5vmin;
       margin-right: 40%;
